Modify access rules

--- a/project.config
+++ b/project.config
@@ -1,6 +1,7 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
+	owner = group github/rdo-management
 	owner = group user/Brad P. Crochet (bcrochet)
 [access "refs/for/refs/*"]
 	read = group user/Brad P. Crochet (bcrochet)
